# pysepal-api

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: index.md
docs/guides/: authentication.md  connecting.md  error-handling.md  getting-started.md  usage.md
docs/reference/: auth.md  client.md  endpoints.md  errors.md  host.md  models.md
docs/superpowers/plans/: 2026-07-09-pysepal-api-docs-site.md
docs/superpowers/specs/: 2026-07-09-pysepal-api-docs-design.md
src/pysepal_api/: __init__.py  auth.py  client.py  compat.py  errors.py  host.py  models.py  paths.py  transport.py
src/pysepal_api/endpoints/: _base.py  processing_recipes.py  recipes.py  tasks.py  user_files.py
tests/: test_async_client.py  test_async_parity.py  test_auth.py  test_client.py  test_compat.py  test_errors.py  test_host.py  test_models.py  test_paths.py  test_transport.py
tests/endpoints/: test_recipes_read.py  test_recipes_write.py  test_tasks_query.py  test_tasks_state_changes.py  test_tasks_submit.py  test_tasks_wait.py  test_user_files_get.py  test_user_files_list.py  test_user_files_mkdir.py  test_user_files_read.py  test_user_files_set.py  test_user_files_write.py
