[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "pysepal-api"
version = "0.1.0.dev0"
description = "UI-free HTTP client for SEPAL platform services (user files, tasks, processing recipes)."
readme = "README.md"
license = "MIT"
authors = [{ name = "Daniel Guerrero", email = "dfgm2006@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
  "black>=24",
  "mypy>=1.10",
  "nox>=2024.4.15",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pysepal_api"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "W", "I", "RUF"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra"
testpaths = ["tests"]
