[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "pysepal-api"
version = "0.2.0"
description = "UI-free HTTP client for SEPAL platform services (user files, tasks, processing recipes)."
readme = "README.md"
license = "MIT"
authors = [{ name = "Daniel Guerrero", email = "dfgm2006@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
]

[project.urls]
Homepage = "https://dfguerrerom.github.io/pysepal-api/"
Documentation = "https://dfguerrerom.github.io/pysepal-api/"
Repository = "https://github.com/dfguerrerom/pysepal-api"
Changelog = "https://github.com/dfguerrerom/pysepal-api/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
  "black>=24",
  "mypy>=1.10",
  "nox>=2024.4.15",
  "commitizen>=3.29",
  "pre-commit>=3.7",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
  "griffe>=1.0",
  "black>=24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pysepal_api"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "W", "I", "RUF"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra"
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_files = [
  "src/pysepal_api/__init__.py:__version__",
]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
